# openlex3d

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  eval_queries_script.sh  evaluate.py  pyproject.toml  replica_crop_generator.py  run_evaluate_queries_all.sh  run_evaluate_queries_replica.sh  run_evaluate_queries_scannetpp.sh
config/: crop_config.yaml  eval_config.yaml
openlex3d/: __init__.py  background_category_adder.py  clip_utils.py  eval_utils.py  metric.py
openlex3d/config/: background_config.yaml  clutter_config.yaml  crop_config.yaml  eval_config.yaml  eval_query.yaml  eval_query_config.yaml  eval_query_config_replica.yaml  eval_segmentation.yaml  hm3d.yaml  replica.yaml  scannetpp.yaml
openlex3d/core/: align_masks.py  average_precision.py  categories.py  colors.py  cosine_similarity.py  evaluation.py  io.py  metric.py  rank_metric.py  transfer_masks.py
openlex3d/dataset_generation/: box.py  clutter_category_adder.py  iou.py  label_refiner.py  prompt_list_generator.py  queries_adder.py  validate_labels.py
openlex3d/datasets/: __init__.py  hm3d.py  hm3dsem.py  replica.py  scannetpp.py
openlex3d/models/: __init__.py  base.py  open_clip.py  openai_clip.py
openlex3d/scripts/: background_category_adder.py  evaluate.py  evaluate_queries.py  evaluate_queries_replica.py  evaluate_segmentation.py  evaluate_sequential_hm3d.sh  evaluate_sequential_replica.sh  label_refiner.py  matches_viz.py  metric_viz.py  pred_mask_viz.py  test_ranking_metric.py
openlex3d/slurm/: launch_eval.sh  launch_hm3d.sh  launch_replica.sh  results.csv  (+5 more)
utils/: eval_utils.py  hovsg_to_cg_format.py  iou.py  label_refiner.py  metric.py  replica_crop_generator.py
(+45 files in other folders)
